[project]
name = "nice-errors"
version = "1.0.1"
description = "Nice error messages for Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GNU Affero General Public License (AGPL) v3"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "colorama",
]
[project.urls]
Homepage = "https://github.com/ProgMEM-CC/nice-errors"
Issues = "https://github.com/ProgMEM-CC/nice-errors/issues"